# Cyber-Stack

./: .env.example  CMakeLists.txt  Cargo.toml  README.md  build.zig
.github/workflows/: cyber_stack_ci.yml
ai_models/llama_3/: apply_lora.py  fetch_model.py  inference_wrapper.py  vllm_config.json
ai_models/triton_repo/: config.pbtxt
build_scripts/: clean_all.sh  compile_all.sh
core_systems/cuda_acceleration/: CMakeLists.txt  matrix_mul.cu
core_systems/rust_orchestrator/: Cargo.toml  Cargo.toml⁠  build.rs  config.toml
core_systems/rust_orchestrator/src/: ai_router.rs  bpf_maps.rs  lib.rs  main.rs  scanner.rs  security_hooks.rs  telemetry.rs
core_systems/zig_utils/: allocator.zig⁠  build.zig  hash_table.zig  main.zig  pattern_match.zig
deploy/: docker-compose.yml
deploy/dockerfiles/: Dockerfile.fuzzing  Dockerfile.orchestrator  Dockerfile.triton  Dockerfile.vllm
deploy/k8s_manifests/: configmap_rules.yaml  orchestrator_deployment.yaml  triton_deployment.yaml  vllm_deployment.yaml
deploy/systemd/: cyber-stack.service
low_level_perf/dpdk_pipeline/: CMakeLists.txt⁠  dpdk_init.c  packet_loop.c
low_level_perf/io_uring/: io_uring_engine.c  io_uring_engine.h  io_uring_ops.c
red_team_infrastructure/sqlmap/: sqlmap_config.ini⁠  sqlmap_wrapper.py
red_team_infrastructure/tamper_scripts/: hex_encode.py  waf_bypass.py
red_team_infrastructure/yara/: base_rules.yar  extended_rules.yar  memory_anomalies.yar  update_signatures.py
security_fuzzing/: fuzz_coordinator.sh
security_fuzzing/afl_harnesses/: Makefile  harness_io.c
(+10 files in other folders)
